--- a/specification/CMakeLists.txt
+++ b/specification/CMakeLists.txt
@@ -31,9 +31,22 @@ add_test(test_calculator_add_steps calculator_add_steps)
 #copy feature file to binary folder ... still unable to make cmake recompile if feature file changes...
 configure_file(${PROJECT_FEATURES_DIR}/addition.feature ${CMAKE_BINARY_DIR}/addition.feature COPYONLY)
 
+
+#== Sub feature ==
+set(CALCULATOR_SUB_STEPS_SOURCES
+        ${PROJECT_SOURCE_DIR}/CalculatorSteps.cpp)
+
+add_executable(calculator_sub_steps EXCLUDE_FROM_ALL ${CALCULATOR_SUB_STEPS_SOURCES})
+add_dependencies(calculator_sub_steps gherkin_cpp-static)
+target_link_libraries(calculator_sub_steps gtest_main gmock_main gherkin-cpp calculator)
+add_custom_command(TARGET calculator_sub_steps COMMAND SCENARIO=${PROJECT_FEATURES_DIR}/subtraction.feature ${CMAKE_BINARY_DIR}/calculator_sub_steps)
+add_test(test_calculator_sub_steps calculator_sub_steps)
+#copy feature file to binary folder ... still unable to make cmake recompile if feature file changes...
+configure_file(${PROJECT_FEATURES_DIR}/subtraction.feature ${CMAKE_BINARY_DIR}/subtraction.feature COPYONLY)
+
 #=== Custom target with all the steps targets
 set(ALL_CALCULATOR_STEPS_TARGETS
         calculator_add_steps
+        calculator_sub_steps
         )
-
 add_custom_target(calculator_test ALL DEPENDS ${ALL_CALCULATOR_STEPS_TARGETS})
